--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -50,17 +50,6 @@ footer{
 #main{
 	padding: 20px;
 }
-.navigation{
-	color: white;
-	padding: 5px;
-	text-align: center;
-	background-color: #096c3d;
-	float: left;
-	border: none;
-	outline: none;
-	font-size: 13px;
-	width: 100%;
-}
 #home{
 	margin:0 auto;
 	font-size: 30px;
@@ -80,51 +69,7 @@ footer{
 	font-weight: 600;
 	font-size: 60px;
 }
-#nounderline{
-	text-decoration: none;
-}
-a{
-	color:white;
-}
-#i1:hover{
-	background-color: #a7ff83;
-	color: black;
-}
-#i1_2:hover{
-	background-color: #a7ff83;
-	color: black;
-}
-#i2:hover{
-	background-color: #a7ff83;
-	color: black;
-}
-#i3:hover{
-	background-color: #a7ff83;
-	color: black;
-}
-#i4:hover{
-	background-color: #a7ff83;
-	color: black;
-}
-#links{
-	display: flex;
-}
-#i1_2{
-	flex-grow: 1;
-}
-#i2{
-	flex-grow: 1;
-}
-#i3{
-	flex-grow: 1;
-}
-#i4{
-	flex-grow: 1;
-}
-.url{
-	color: inherit;
-	text-decoration: none;
-}
+
 .mainLabel{
 	margin-top: 20px;
 	display: inline-block;
@@ -135,4 +80,64 @@ fieldset{
 input{
 	margin-bottom: 5px;
 }
+
+.navbar {
+	overflow: hidden;
+	background-color: #096c3d;
+	font-family: 'Montserrat', sans-serif;
+	margin: 0;
+}
+.navbar a {
+  	float: right;
+  	font-size: 20px;
+  	color: white;
+  	text-align: center;
+  	padding: 14px 16px;
+  	text-decoration: none;
+}
+.dropdown {
+ 	float: left;
+ 	overflow: hidden;
+ 	margin-right: 25px;
+
+}
+.dropdown .dropbtn {
+	font-size: 20px;
+	font-weight: bold;
+	border: none;
+	outline: none;
+	color: white;
+	padding: 14px 16px;
+	background-color: inherit;
+	font-family: inherit; /* Important for vertical align on mobile phones */
+	margin: 0; /* Important for vertical align on mobile phones */
+}
+.navbar a:hover, .dropdown:hover .dropbtn {
+  	background-color: #a7ff83;
+  	color: black;
+}
+.dropdown-content {
+  	display: none;
+  	position: absolute;
+  	background-color: #096c3d;
+  	min-width: 160px;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  	z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: white;
+  font-size: 16px;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #a7ff83;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 /*https://colorhunt.co/palette/167893*/
