--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -102,6 +102,7 @@ footer{
 }
 #mainInlamning4 > p:nth-child(2) {
 	border-color: white;
+	border-width: 5px;
 	background-color: black;
 	color: white;
 	padding: 10px;
