--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -98,6 +98,7 @@ footer{
 }
 #mainInlamning4 ul{
 	padding: 10px;
+	margin: 10px;
 }
 #mainInlamning4 ul li{
 	font-style: italic;
@@ -109,6 +110,7 @@ footer{
 	background-color: black;
 	color: white;
 	padding: 10px;
+	margin: 10px;
 }
 #mainInlamning4 > p:nth-child(4) {
 	border-color: black;
@@ -117,11 +119,13 @@ footer{
 	background-color: yellow;
 	color: black;
 	padding: 10px;
+	margin: 10px;
 }
 #mainInlamning4 > p:nth-child(7) {
 	font-weight: bold;
 	font-style: italic;
 	padding: 10px;
+	margin: 10px;
 
 }
 #mainInlamning4 table th{
