--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -98,6 +98,10 @@ footer{
 }
 #mainInlamning4 ul{
 	padding: 10px;
+	margin: 30px;
+}
+#mainInlamning4 table {
+	padding: 10px;
 	margin: 10px;
 }
 #mainInlamning4 ul li{
