--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -93,7 +93,7 @@ footer{
 #mainInlamning4 {
 	background: #26734f;
 }
-#mainInlamning4 h1{
+#mainInlamning4 h1, h2{
 	text-align: center;
 }
 #mainInlamning4 ul{
