--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -159,10 +159,11 @@ input{
 	padding-left: 10px;
 }
 .inlamning5 ul{
-	display:inline
+	
 }
 .inlamning5 li{
 	list-style-type: none;
+	float: right;
 }
 
 /*Secondary navigation bar, used for inlamning4*/
