--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -151,19 +151,24 @@ input{
 }
 
 /*styling for inlamning5*/
-.inlamning5 nav{
-	display: inline-block;
+.inlamning5 header{
+	display: flex;
+	justify-content: space-between;
+	overflow: hidden;
 }
-.inlamning5 #headerh1{
-	float: left;
-	padding-left: 10px;
+.inlamning5 header h1{
+	padding-left: 20px;
 }
 .inlamning5 ul{
-	display: inline;
+	padding-right: 20px;
+	text-align: left;
 }
 .inlamning5 li{
 	list-style-type: none;
-	float: right;
+	letter-spacing: 0px;
+}
+.inlamning5 nav a{
+	float: left;
 }
 
 /*Secondary navigation bar, used for inlamning4*/
