--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -170,7 +170,7 @@ input{
 .inlamning5 nav a{
 	float: left;
 }
-.inlamning5 .body h1{
+.inlamning5 .body{
 	float: left;
 }
 .inlamning5 .body aside{
