--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -174,8 +174,10 @@ input{
 	float: left;
 	margin: 10px;
 }
-.inlamning5 .body form fieldset{
+.inlamning5 .body aside{
 	float: right;
+}
+.inlamning5 .body form fieldset{
 	border-width: 2px;
 	border-style: solid;
 	border-color: black;
