--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -178,8 +178,9 @@ input{
 	border-style: solid;
 	border-color: black;
 }
-.inlamning5 .body aside [type=submit]{
+.inlamning5 .body aside input[type=submit]{
 	padding-left: 5px;
+	margin-top: 50px;
 	background-color: red;
 	align-content: center;
 	text-align: center;
