--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -174,13 +174,13 @@ input{
 	margin: 10px;
 	float: left;
 }
-.inlamning5 .body form fieldset{
+.inlamning5 form fieldset{
 	border-width: 2px;
 	border-style: solid;
 	border-color: black;
 }
 .inlamning5 label{
-	padding-left: 5px;
+	padding-right: 5px;
 }
 
 /*Secondary navigation bar, used for inlamning4*/
