--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -177,7 +177,7 @@ input{
 .inlamning5 form fieldset{
 	border-width: 2px;
 	border-style: solid;
-	border-color: black;
+	border-color: white;
 }
 .inlamning5 label{
 	padding-right: 5px;
