--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -191,9 +191,8 @@ input{
 .inlamning5 label{
 	padding-right: 5px;
 }
-.inlamning5 input[type="submit"]{
-	display:block
-	margin: 0 auto;
+.inlamning5 fieldset:nth-child(3){
+	text-align: center;
 }
 
 
