--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -191,7 +191,7 @@ input{
 .inlamning5 label{
 	padding-right: 5px;
 }
-.inlamning5 fieldset:nth-child(3){
+.inlamning5 div:nth-child(3){
 	text-align: center;
 }
 
