--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -173,7 +173,7 @@ input{
 .inlamning5 .container{
 	width: 90%;
 	margin: auto;
-  	padding: 10px;
+	margin-top: 15%;
 }
 .inlamning5 section{
 	float: left;
