--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -1,3 +1,8 @@
+/*TODO: 
+add container to every page
+add i5 info from header
+*/
+
 /*styling for main elements*/
 html{
  	background: url('green-gradient.jpg') no-repeat center center fixed; 
@@ -182,7 +187,6 @@ input{
 	float: right;
   	width: 20%;
   	margin-top: 5%;
-
 }
 .inlamning5 form fieldset{
 	border-width: 2px;
@@ -196,6 +200,12 @@ input{
 	text-align: center;
 }
 
+/*styling for inlamning6*/
+.inlamning6 header{
+	display: flex;
+	justify-content: space-between;
+	overflow: hidden;
+}
 
 /*Secondary navigation bar, used for inlamning4*/
 .navbarSecondary {
@@ -278,20 +288,12 @@ input{
 }
 
 /*Misc*/
-#home{
-	margin:0 auto;
-	font-size: 30px;
-	position: absolute;
- 	width: 300px;
- 	height: 200px;
-  	z-index: 15;
-  	top: 50%;
-  	left: 50%;
-  	margin: -100px 0 0 -150px;
-  	white-space: nowrap;
+#container{
   	text-align: center;
+	width: 90%;
+	margin: auto;
 }
-#homeh3{
+#container h3{
 	letter-spacing: 15px;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
