--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -291,7 +291,12 @@ input{
 .container{
   	text-align: center;
 	width: 90%;
-	margin: auto;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    height: 100px;
 }
 .container h3{
 	letter-spacing: 15px;
