--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -290,12 +290,12 @@ input{
 /*Misc*/
 .container{
   	text-align: center;
-	width: 90%;
 	position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -50px;
     margin-left: -50px;
+    width: 100px;
     height: 100px;
 }
 .container h3{
