--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -208,6 +208,7 @@ https://colorpalettes.net/color-palette-2093/
 .inlamning6{
 	background-color: white;
 	color: black;
+	background-image: none;
 }
 
 /*Secondary navigation bar, used for inlamning4*/
