background image change

--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -5,7 +5,7 @@ add i5 info from header
 
 /*general*/
 html{
- 	background: url('green-gradient.jpg') no-repeat center center fixed; 
+ 	background-image: url('green-gradient.jpg') no-repeat center center fixed; 
   	-webkit-background-size: cover;
   	-moz-background-size: cover;
  	-o-background-size: cover;
