--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -212,9 +212,8 @@ https://stackoverflow.com/questions/8049276/can-you-overlay-a-transparent-css3-g
 https://graphicdesign.stackexchange.com/questions/93149/how-to-create-a-fade-effect-with-css-on-background-with-an-image-on-top-of-it
 */
 .inlamning6{
-	background-color: white;
+	background: none;
 	color: black;
-	background-color: white;
 	/*background-size:100% 100%;*/
 }
 
