--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -212,9 +212,14 @@ https://stackoverflow.com/questions/8049276/can-you-overlay-a-transparent-css3-g
 https://graphicdesign.stackexchange.com/questions/93149/how-to-create-a-fade-effect-with-css-on-background-with-an-image-on-top-of-it
 */
 .inlamning6{
-	background: none;
+	background: url('plain-white-background.jpg'); 
+ 	background-repeat: no-repeat;
+	background-position: right top;
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+ 	-o-background-size: cover;
+ 	background-size: cover;
 	color: black;
-	/*background-size:100% 100%;*/
 }
 
 
