--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -222,6 +222,16 @@ https://graphicdesign.stackexchange.com/questions/93149/how-to-create-a-fade-eff
 	color: black;
 	background-size: 100% 100%;
 }
+.inlamning6 .navbarSecondary ul{
+	list-style-type: none;
+  	margin: 0;
+  	padding: 0;
+}
+.inlamning6 .navbarSecondary li a{
+	display: block;
+  	width: 60px;
+}
+
 
 
 /*Secondary navigation bar, used for inlamning4*/
