--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -203,13 +203,7 @@ input{
 }
 
 /*styling for inlamning6
-https://colorpalettes.net/color-palette-2093/
-#000c14 - black
-#f8002f - red
 
-notes for image gradient
-https://stackoverflow.com/questions/8049276/can-you-overlay-a-transparent-css3-gradient-over-a-background-image
-https://graphicdesign.stackexchange.com/questions/93149/how-to-create-a-fade-effect-with-css-on-background-with-an-image-on-top-of-it
 */
 .inlamning6{
 	background: url('plain-white-background.jpg'); 
@@ -226,18 +220,21 @@ https://graphicdesign.stackexchange.com/questions/93149/how-to-create-a-fade-eff
  	margin: 0;
   	padding: 0;
   	width: 200px;
-  	background-color: #f1f1f1;
+  	background-color: white;
+}
+.inlamning6 .navbarSecondary li{
+	margin-bottom: 10px; 
 }
 .inlamning6 .navbarSecondary li a{
 	display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
+  	color: #000;
+  	padding: 8px 16px;
+  	text-decoration: none;
 }
 
 .inlamning6 .navbarSecondary li a:hover{
-  background-color: #555;
-  color: white;
+  	background-color: #555;
+  	color: white;
 }
 
 
