--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -225,10 +225,12 @@ NOTES: do float left right for the two divs in container (sidebar maincontent)
  	margin: 0;
   	padding: 0;
   	width: 200px;
-  	background-color: white;
 }
 .inlamning6 .navbarSecondary li{
 	margin-bottom: 20px; 
+	background-color: white;
+	border-radius: 15%;
+
 }
 .inlamning6 .navbarSecondary li a{
 	display: block;
