--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -225,7 +225,7 @@ NOTES: do float left right for the two divs in container (sidebar maincontent)
   margin: 0;
   padding: 0;
   width: 200px;
-  background-color: #f1f1f1;
+  background-color: black;
 }
 .inlamning6 .navbarSecondary li{
 	margin-bottom: 20px; 
