--- a/Malmö högskola/design.css
+++ b/Malmö högskola/design.css
@@ -221,11 +221,12 @@ NOTES: do float left right for the two divs in container (sidebar maincontent)
 	background-image: none;
 }
 .inlamning6 .navbarSecondary ul{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: black;
+  	list-style-type: none;
+  	margin: 0;
+  	padding: 0;
+  	width: 200px;
+  	background-color: black;
+  	text-align: center;
 }
 .inlamning6 .navbarSecondary li{
 	margin-bottom: 20px; 
