--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -1,3 +1,11 @@
+body{
+	margin: 0;
+	padding: 0;
+	min-height: 400px;
+	margin-bottom: 100px;
+	clear: both;
+}
+
 .inlamning6 .container{
 	width: 100%;
 	margin-left: 0px;
