--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -1,27 +1,19 @@
-body{
-	margin: 0;
-	padding: 0;
-	min-height: 400px;
-	margin-bottom: 100px;
-	clear: both;
-}
-
-.inlamning6 .container{
+.container{
 	width: 100%;
 	margin-left: 0px;
 }
-.inlamning6 .sidebar{
+.sidebar{
 	float: left;
 	width: 30%;
 	background-color: black;
 	text-align: center;
 }
-.inlämning6 .mainContent{
+.mainContent{
 	float: right;
 	width: 70%;
 	background-image: none;
 }
-.inlamning6 .navbarSecondary ul{
+nav ul{
   	list-style-type: none;
   	margin: 0;
   	padding: 0;
@@ -29,20 +21,20 @@ body{
   	background-color: black;
   	display: inline-block;
 }
-.inlamning6 .navbarSecondary li{
+nav li{
 	margin-bottom: 20px; 
 	background-color: white;
 	border-radius: 5%;
 	width: 165px;
 	padding: 8px 16px;
 }
-.inlamning6 .navbarSecondary li a{
+nav li a{
 	display: block;
   	color: #000;
   	text-decoration: none;
 }
 
-.inlamning6 .navbarSecondary li a:hover{
+nav li a:hover{
   	background-color: #555;
   	color: white;
   	border-radius: 5%;
