--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -1,6 +1,17 @@
+* {
+      margin: 0;
+      padding: 0;
+       border: 0;
+    outline: 0;
+       font-size: 100%;
+       vertical-align: baseline;
+       background: transparent;
+ }
+
 .container{
 
 }
+
 .sidebar{
 	float: left;
 	width: 30%;
