--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -1,11 +1,11 @@
 * {
-      margin: 0;
-      padding: 0;
-       border: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
     outline: 0;
-       font-size: 100%;
-       vertical-align: baseline;
-       background: transparent;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
  }
 
 .container{
@@ -40,7 +40,7 @@ nav li{
 	background-color: white;
 	border-radius: 5%;
 	width: 165px;
-	padding: 8px 16px;
+	padding-bottom: 6px;
 }
 nav li a{
 	display: block;
