--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -25,7 +25,7 @@
 	width: 70%;
 	height: 100%;
 	background-color: yellow;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 }
 nav ul{
   	list-style-type: none;
