--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -13,12 +13,15 @@
 }
 
 .sidebar{
-	float: left;
+	/*float: left;
 	width: 30%;
 	height: 100%;
 	background-color: black;
 	text-align: center;
-   /* margin: 0 auto;*/
+   	margin: 0 auto;*/
+	height: 100%;
+	background-color: black;
+	text-align: center;
 }
 .mainContent{
 	float: right;
