--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -13,15 +13,12 @@
 }
 
 .sidebar{
-	/*float: left;
-	width: 30%;
+	float: left;
 	height: 100%;
+	/*width: 30%;
 	background-color: black;
 	text-align: center;
    	margin: 0 auto;*/
-	height: 100%;
-	background-color: black;
-	text-align: center;
 }
 .mainContent{
 	float: right;
