--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -13,17 +13,14 @@
 }
 
 .sidebar{
-	float: left;
+	left: 0;
 	height: 100%;
-	/*width: 30%;
+	width: 260px
 	background-color: black;
 	text-align: center;
-   	margin: 0 auto;*/
+   	margin: 0 auto;
 }
 .mainContent{
-	float: right;
-	width: 70%;
-	height: 100%;
 	background-color: yellow;
 	margin: 0 auto;
 }
