--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -39,9 +39,11 @@
 	background: white;
 	border: 0px;
 	border-radius: 5px;
+	margin: 30px;
+	/*
 	padding-top: 10px;
 	padding-left: 10px;
-	padding-right: 10px;
+	padding-right: 10px;*/
 }
 .sidebar ul li{
 
