--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -39,7 +39,8 @@
 	background: white;
 	border: 0px;
 	border-radius: 5px;
-	margin: 30px;
+	margin: 20px;
+	line-height: 30px;
 	/*
 	padding-top: 10px;
 	padding-left: 10px;
