--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -8,6 +8,8 @@
     background: transparent;
  } 
  .sidebar img {
+ 	margin-top: 20px;
+ 	margin-bottom: 20px;
  	display: block;
  	margin-left: auto;
   	margin-right: auto;
@@ -46,11 +48,7 @@
 	border: 0px;
 	border-radius: 5px;
 	margin: 20px;
-	line-height: 30px;
-	/*
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-right: 10px;*/
+	line-height: 40px;
 }
 .sidebar ul li{
 
