--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -14,7 +14,7 @@
  	width: 250px;
  	height: 100%;
  	background: black;
- 	font-family: 'Roboto';
+ 	font-family: 'Bahnschrift';
  }
 
 .sidebar img {
