--- a/Malmö högskola/design_i6.css
+++ b/Malmö högskola/design_i6.css
@@ -48,7 +48,7 @@
 	margin: 20px;
 	line-height: 40px;
 	list-style: none;
- 	text-decoration-style: none;
+ 	text-decoration: none;
 }
 
 /*.container{
